Chcecking open/closePremissionRequest on other locks II